--- a/index.html
+++ b/index.html
@@ -1,15 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hackathon Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
 
 
-  <h1>Hello, World!</h1>
+  <!-- Navbar -->
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#projects">Projects</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <!-- Home Section -->
+  <section id="home">
+    <h1>Welcome to My Portfolio</h1>
+    <p>This is the home section. Explore more about me, my projects, and how to contact me.</p>
+  </section>
+
+  <!-- About Section -->
+  <section id="about">
+    <h1>About Me</h1>
+    <p>I’m a passionate developer eager to build impactful web applications and solve real-world problems through
+      technology.</p>
+  </section>
+
+  <!-- Projects Section -->
+  <section id="projects">
+    <h1>My Projects</h1>
+    <p>Here are some of the projects I've worked on — from simple websites to dynamic web apps.</p>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact">
+    <h1>Contact Me</h1>
+    <p>Feel free to reach out via email at example@example.com or through my social media platforms.</p>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 My Portfolio. All rights reserved.</p>
+  </footer>
   <script src="script.js"></script>
 </body>
+
 </html>
