--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <li><strong>🎓 Education:</strong> B.Tech in Electronics (VLSI), Jamia Millia Islamia</li>
                 <li><strong>📍 Address:</strong> Noida, Uttar Pradesh, India</li>
                 <li><strong>📧 Email:</strong> noor@example.com</li>
-                <li><strong>🛠️ Skills:</strong> HTML, CSS, JavaScript, React, C++, Figma</li>
+                <li><strong>🛠️ Skillss:</strong> HTML, CSS, JavaScript, React, C++, Figma</li>
               </ul>
             
               <a href="resume.pdf" class="resume-btn" download>📄 Download Resume</a>
