--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
 
 <body>
 
-  <!-- Navbar -->
   <nav>
     <div id="nav-logo">
-      <img src="/Hackathon-Portfolio/assetss/porfolio logo.jpg" alt="Portfolio Logo" />
+      <img src="./assetss/porfolio logo.jpg" alt="Portfolio Logo" />
     </div>
     <div id="nav-item">
       <a href="#home" class="active">Home</a>
@@ -32,16 +31,14 @@
     </div>
   </nav>
 
-  <!-- Hero Section -->
   <section id="home">
     <div class="section-1">
       <div class="sec1-left">
         <h1>Hello, I'm a Developer.<br> I build web magic.</h1>
         <p>Custom, elegant and efficient solutions tailored to your needs.</p>
-        
-    
 
-        <!-- Social Icons -->
+
+
         <div class="social-links">
           <a href="https://linkedin.com" target="_blank">
             <img src="./assetss/linkedin.svg" alt="LinkedIn">
@@ -63,9 +60,8 @@
       </div>
     </div>
   </section>
-  
 
-  <!-- About Section -->
+
   <section id="about">
     <section class="services-section">
 
@@ -75,10 +71,7 @@
             src="https://img.freepik.com/premium-vector/illustration-web-development-programmer-coding-website_746655-2880.jpg?w=360"
             alt="Face" class="card-image">
         </div>
-        <!-- Web Developer Card -->
         <div class="card card-highlight" id="topCard">
-
-          <!-- <img src="https://img.icons8.com/?size=100&id=l0UsZRTvcGel&format=png&color=000000" alt="Developer" /> -->
 
           <h3>Web Developer</h3>
           <p>"Passionate Web Developer skilled in creating responsive, user-friendly websites with HTML, CSS,
@@ -87,10 +80,7 @@
 
         </div>
 
-        <!-- Web Designer Card -->
         <div class="card">
-          <!-- <img src="https://img.icons8.com/?size=100&id=82282&format=png&color=000000" alt="Design" /> -->
-
           <h3>Web Designer</h3>
           <p>"Creative Web Designer skilled in using Figma, Adobe XD, Sketch, and InVision to create visually
             appealing, intuitive, and responsive designs for seamless user experiences across devices."</p>
@@ -100,15 +90,14 @@
       </div>
 
 
-      <!-- Swiper Container for Cube Effect -->
       <div class="swiper-container">
         <div class="swiper-wrapper">
-          <!-- Slide 1 (Linked with Web Developer Card) -->
           <div class="swiper-slide">
             <div class="about-content">
               <h2><span>About</span> Me</h2>
               <p>
-                I’m a passionate web developer who loves turning ideas into user-friendly, responsive, and dynamic web
+                I’m a passionate web developer who loves turning ideas into user-friendly, responsive, and
+                dynamic web
                 experiences.
                 I specialize in front-end development using modern tools and frameworks to build seamless digital
                 interfaces.
@@ -126,7 +115,6 @@
 
           </div>
 
-          <!-- Slide 2 -->
           <div class="swiper-slide">
             <div class="webDev">
               <h2><span>Web</span> Developer </h2>
@@ -151,7 +139,6 @@
                   title="GitHub">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg"
                   alt="Bootstrap" title="Bootstrap">
-                <!-- <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tailwindcss/tailwindcss-plain.svg" alt="Tailwind CSS" title="Tailwind CSS"> -->
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" alt="VS Code"
                   title="VS Code">
               </div>
@@ -161,7 +148,6 @@
 
           </div>
 
-          <!-- Slide 3 -->
           <div class="swiper-slide">
             <div class="webDev webDesign">
               <h2><span>Web</span> Design </h2>
@@ -196,26 +182,25 @@
           </div>
         </div>
 
-        <!-- Pagination (optional) -->
         <div class="swiper-pagination"></div>
       </div>
     </section>
   </section>
 
 
-  <!-- Projects Section -->
   <section id="projects">
-    <h1>My Projects</h1>
-    <p>Here are some of the projects I've worked on — from simple websites to dynamic web apps.</p>
+    <div class="project-section">
+
+      <h1>My Projects</h1>
+      <p>Here are some of the projects I've worked on — from simple websites to dynamic web apps.</p>
+    </div>
   </section>
 
-  <!-- Contact Section -->
   <section id="contact">
     <h1>Contact Me</h1>
     <p>Feel free to reach out via email at example@example.com or through my social media platforms.</p>
   </section>
 
-  <!-- Footer -->
   <footer>
     <p>&copy; 2025 My Portfolio. All rights reserved.</p>
   </footer>
