--- a/index.html
+++ b/index.html
@@ -59,7 +59,12 @@
   </section>
 
   <section id="about">
-    <section class="services-section">
+    <section class="about-section">
+      <!-- Added About Me Heading and Description -->
+      <div class="about-header">
+        <h1>About Me</h1>
+        <p>Passionate web developer and designer focused on delivering seamless, user-friendly, and dynamic web experiences.</p>
+      </div>
 
       <div class="cards-container">
         <div class="top-image-container" id="profileImageTrigger">
@@ -169,84 +174,40 @@
         <div class="swiper-pagination"></div>
       </div>
     </section>
-  </section>
+</section>
 
   <!-- Updated Projects Section -->
   <section id="projects">
-    <div>
-        <div class="project-section">
-            <h1>My Projects</h1>
-            <p class="project-para">Here are some of the projects I've worked on — from simple websites to dynamic web apps.</p>
-        </div>
+    <div class="project-section">
+        <h1>My Projects</h1>
+        <p class="project-para">Here are some of the projects I've worked on — from simple websites to dynamic web apps.</p>
     </div>
 
     <div class="project-nav">
-        <div id="nav-item">
-            <a href="#Web Development Projects" data-filter="web-development">Web Development Projects</a>
-            <a href="#Web Design Projects" data-filter="web-design">Web Design Projects</a>
-            <a href="#All Projects" data-filter="all">All Projects</a>
-        </div>
+        <button class="nav-btn" data-filter="all">All Projects</button>
+        <button class="nav-btn" data-filter="web-development">Web Development</button>
+        <button class="nav-btn" data-filter="web-design">Web Design</button>
     </div>
 
-    <div class="project-grid">
-        <div class="project-card web-development">
-            <img src="project1-thumbnail.jpg" alt="Project 1 Thumbnail">
-            <h3>E-commerce Website</h3>
-            <p>A fully functional e-commerce platform built with React and Node.js.</p>
-            <div class="project-badges">
-                <span class="badge">React</span>
-                <span class="badge">Node.js</span>
-                <span class="badge">Express</span>
-            </div>
-            <div class="project-links">
-                <a href="live-site-link" target="_blank">Live Site</a>
-                <a href="github-repo-link" target="_blank">GitHub</a>
-            </div>
-        </div>
-
-        <div class="project-card web-development">
-            <img src="project2-thumbnail.jpg" alt="Project 2 Thumbnail">
-            <h3>Weather App</h3>
-            <p>A dynamic weather application using a third-party API.</p>
-            <div class="project-badges">
-                <span class="badge">JavaScript</span>
-                <span class="badge">API</span>
-                <span class="badge">HTML</span>
-                <span class="badge">CSS</span>
-            </div>
-            <div class="project-links">
-                <a href="live-site-link" target="_blank">Live Site</a>
-                <a href="github-repo-link" target="_blank">GitHub</a>
-            </div>
-        </div>
-
-        <div class="project-card web-design">
-            <img src="design1-thumbnail.jpg" alt="Design 1 Thumbnail">
-            <h3>Landing Page Redesign</h3>
-            <p>Redesigned a landing page for improved user experience.</p>
-            <div class="project-badges">
-                <span class="badge">Figma</span>
-                <span class="badge">UI/UX</span>
-            </div>
-            <div class="project-links">
-                <a href="design-link" target="_blank">Design Link</a>
-            </div>
-        </div>
-
-        <div class="project-card web-design">
-            <img src="design2-thumbnail.jpg" alt="Design 2 Thumbnail">
-            <h3>Mobile App UI</h3>
-            <p>Designed a clean and intuitive mobile app interface.</p>
-            <div class="project-badges">
-                <span class="badge">Adobe XD</span>
-                <span class="badge">Mobile UI</span>
-            </div>
-            <div class="project-links">
-                <a href="design-link" target="_blank">Design Link</a>
-            </div>
-        </div>
-    </div>
+    <div class="project-grid" id="projectGrid"></div>
 </section>
+
+<!-- Popup Modal -->
+<div id="popup" class="popup hidden">
+    <div class="popup-content">
+        <div class="popup-left">
+            <img id="popup-img" src="" alt="Project Full Image">
+        </div>
+        <div class="popup-right">
+            <h2 id="popup-title"></h2>
+            <p id="popup-description"></p>
+            <div id="popup-skills" class="popup-skills"></div>
+            <a id="popup-link" href="#" target="_blank" class="preview-btn">Preview</a>
+        </div>
+        <span id="popup-close">&times;</span>
+    </div>
+</div>
+
 
   <section id="contact">
     <div class="contact-header">
