--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -15,7 +16,7 @@
 
   <nav>
     <div id="nav-logo">
-      <img src="./assetss/porfolio logo.jpg" alt="Portfolio Logo" />
+      <img src="./assetss/Noor-design-china-name-removebg-preview.png" alt="Portfolio Logo" />
     </div>
     <div id="nav-item">
       <a href="#home" class="active">Home</a>
@@ -24,7 +25,7 @@
       <a href="#contact">Contact</a>
     </div>
     <div class="nav-btn">
-      <a href="resume.pdf" target="_blank">
+      <a href="./assetss/Resume.pdf" target="_blank">
         <button>Resume</button>
       </a>
     </div>
@@ -33,27 +34,32 @@
   <section id="home">
     <div class="section-1">
       <div class="sec1-left">
-        <h1>Hello, I'm a Developer.<br> I build web magic.</h1>
-        <p>Custom, elegant and efficient solutions tailored to your needs.</p>
+        <h1>Hello,<br> I’m Noor Islam</h1>
+        <p> A Passionate Web Developer & Designer Crafting Stunning Digital Experiences</p>
 
         <div class="social-links">
-          <a href="https://linkedin.com" target="_blank">
+          <a href="www.linkedin.com/in/noor-islam-086ba4310" target="_blank">
             <img src="./assetss/linkedin.svg" alt="LinkedIn">
           </a>
-          <a href="https://github.com" target="_blank">
+          <a href="https://github.com/Noorislam-51" target="_blank">
             <img src="./assetss/github.svg" alt="GitHub">
           </a>
-          <a href="https://instagram.com" target="_blank">
+          <a href="https://www.instagram.com/noorislam_51/?next=%2F&hl=en" target="_blank">
             <img src="./assetss/instagram.svg" alt="Instagram">
           </a>
-          <a href="https://facebook.com" target="_blank">
+          <a href="https://www.facebook.com/mdnoor.islam.9828456" target="_blank">
             <img src="./assetss/facebook.svg" alt="Facebook">
           </a>
         </div>
-        <button class="secondary-btn">Resume</button>
+        <!-- <button class="secondary-btn">Resume</button> -->
+        <div class="secondary-btn">
+          <a href="./assetss/Resume.pdf" target="_blank">
+            <button>Resume</button>
+          </a>
+        </div>
       </div>
       <div class="sec1-right">
-        <img src="./assetss/decoration.png" alt="Profile Image">
+        <img src="./assetss/decoration (1).png" alt="Profile Image">
       </div>
     </div>
   </section>
@@ -91,19 +97,16 @@
           <div class="swiper-slide">
             <div class="about-content">
               <h2><span>About</span> Me</h2>
-              <p>I’m a passionate web developer who loves turning ideas into user-friendly, responsive, and
-                dynamic web experiences.
-                I specialize in front-end development using modern tools and frameworks to build seamless digital
-                interfaces.</p>
+              <p>Hi, I'm Noor — a creative Web Developer & Designer passionate about building responsive, interactive, and visually engaging websites using modern tools like HTML, CSS, JavaScript, and React. I love bringing ideas to life through seamless user experiences.</p>
 
               <ul class="about-details">
                 <li><strong>🎓 Education:</strong> B.Tech in Electronics (VLSI), Jamia Millia Islamia</li>
                 <li><strong>📍 Address:</strong> Noida, Uttar Pradesh, India</li>
-                <li><strong>📧 Email:</strong> noor@example.com</li>
-                <li><strong>🛠️ Skills:</strong> HTML, CSS, JavaScript, React, C++, Figma</li>
+                <li><strong>📧 Email:</strong> mdnoor8586@gmail.com</li>
+                <li><strong>🛠️ Skills:</strong> HTML, CSS, JavaScript, React, C Programming, C++, Figma, Canva</li>
               </ul>
 
-              <a href="resume.pdf" class="resume-btn" download>📄 Download Resume</a>
+              <a href="./assetss/Resume.pdf" class="resume-btn" download>📄 Download Resume</a>
             </div>
           </div>
 
@@ -125,8 +128,8 @@
                   title="React">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg" alt="C++"
                   title="C++">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/figma/figma-original.svg" alt="Figma"
-                  title="Figma">
+                <!-- <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/figma/figma-original.svg" alt="Figma"
+                  title="Figma"> -->
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub"
                   title="GitHub">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg"
@@ -148,22 +151,22 @@
               <div class="skills-grid">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/figma/figma-original.svg" alt="Figma"
                   title="Figma">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/adobexd/adobexd-line.svg" alt="Adobe XD"
-                  title="Adobe XD">
+                  <!-- <img src="https://cdn.simpleicons.org/adobexd/FF61F6" alt="Adobe XD" title="Adobe XD" width="40" height="40" /> -->
+
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/photoshop/photoshop-line.svg"
                   alt="Photoshop" title="Photoshop">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/illustrator/illustrator-line.svg"
                   alt="Illustrator" title="Illustrator">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/canva/canva-original.svg" alt="Canva"
                   title="Canva">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML5"
+                <!-- <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML5"
                   title="HTML5">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS3"
                   title="CSS3">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg"
                   alt="Bootstrap" title="Bootstrap">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tailwindcss/tailwindcss-plain.svg"
-                  alt="Tailwind CSS" title="Tailwind CSS">
+                  alt="Tailwind CSS" title="Tailwind CSS"> -->
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/wordpress/wordpress-original.svg"
                   alt="WordPress" title="WordPress">
               </div>
@@ -223,11 +226,11 @@
               d="M20 15.5c-1.25 0-2.45-.2-3.57-.57a1.02 1.02 0 0 0-1.02.24l-2.2 2.2a15.045 15.045 0 0 1-6.59-6.59l2.2-2.21a.96.96 0 0 0 .25-1A11.36 11.36 0 0 1 8.5 4c0-.55-.45-1-1-1H4c-.55 0-1 .45-1 1 0 9.39 7.61 17 17 17 .55 0 1-.45 1-1v-3.5c0-.55-.45-1-1-1z" />
           </svg>
         </div>
-        <h3>Talk to Sales</h3>
-        <p>Interested in our services? Just pick up the phone to chat with a member of our sales team.</p>
+        <h3>Contact Me</h3>
+        <p>Want to work together or have a question? Feel free to reach out anytime.</p>
         <div class="contact-info">
-          <p><strong>Phone:</strong> +91 9876543210</p>
-          <p><strong>Email:</strong> example@email.com</p>
+          <p><strong>Phone:</strong> +91 9266863816</p>
+          <p><strong>Email:</strong> mdnoor8586@gmail.com</p>
         </div>
       </div>
 
@@ -238,10 +241,10 @@
               d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5a2.5 2.5 0 0 1 0-5 2.5 2.5 0 0 1 0 5z" />
           </svg>
         </div>
-        <h3>Visit Our Office</h3>
-        <p>We'd love to welcome you to our office and discuss how we can help with your needs.</p>
+        <h3>Address</h3>
+        <p>Located in Noida, India, I’m available for both local and remote projects.</p>
         <div class="contact-info">
-          <p><strong>Address:</strong> 123 Street, City, India</p>
+          <p><strong>Address:</strong> Noida, Uttar Pradesh, India</p>
         </div>
       </div>
 
@@ -252,8 +255,10 @@
               d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 22l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-2 12H6v-2h12v2zm0-3H6V9h12v2zm0-3H6V6h12v2z" />
           </svg>
         </div>
-        <h3>Contact Customer Support</h3>
-        <p>Need help or have questions? Our support team is ready to assist you with any inquiries.</p>
+        <h3>Drop Your Message</h3>
+        <p>Have questions or need support? I’m happy to assist you with anything you need.
+
+        </p>
         <button id="contactBtn" class="contact-button">Connect With Us</button>
       </div>
     </section>
