--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
   </section>
 
   <footer>
-    <div class="footer-">
+    <div class="footer_">
       <div class="footer-logo">
         <img src="./assetss/Noor-design-china-name-removebg-preview.png" alt="">
       </div>
