--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="responsive.css">
 
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -16,21 +17,31 @@
 
   <nav>
     <div id="nav-logo">
-      <a href="#home"> <img src="./assetss/Noor-design-china-name-removebg-preview.png" alt="Portfolio Logo" /></a>
-     
+      <a href="#home">
+        <img src="./assetss/Noor-design-china-name-removebg-preview.png" alt="Portfolio Logo" />
+      </a>
     </div>
+  
     <div id="nav-item">
       <a href="#home" class="active">Home</a>
       <a href="#about">About</a>
       <a href="#projects">Projects</a>
       <a href="#contact">Contact</a>
+  
+      <!-- Resume button moved inside hamburger nav menu -->
+      <div class="nav-btn">
+        <a href="./assetss/Resume.pdf" target="_blank">
+          <button>Resume</button>
+        </a>
+      </div>
     </div>
-    <div class="nav-btn">
-      <a href="./assetss/Resume.pdf" target="_blank">
-        <button>Resume</button>
-      </a>
+  
+    <!-- Hamburger menu icon -->
+    <div class="hamburger">
+      <img src="./assetss/hamburger.svg" alt="Menu" />
     </div>
   </nav>
+  
 
   <section id="home">
     <div class="section-1">
