--- a/index.html
+++ b/index.html
@@ -221,10 +221,12 @@
         <p id="popup-description"></p>
         <div id="popup-skills" class="popup-skills"></div>
         <a id="popup-link" href="#" target="_blank" class="preview-btn">Preview</a>
+        <a id="popup-img-link" href="#" target="_blank" class="preview-btn">Show Image</a>
       </div>
       <span id="popup-close">&times;</span>
     </div>
   </div>
+  
 
 
   <section id="contact">
