--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <!-- <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet" /> -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
+
+
   <!-- <link rel="stylesheet" href="responsive.css"> -->
 
   <link rel="stylesheet" href="style.css" />
@@ -109,32 +113,114 @@
           <li><strong>📧 Email:</strong> mdislam989100@gmail.com</li>
         </ul>
 
-        <div class="skills-section">
-          <h3>🛠️ Technical Skills</h3>
-          <div class="skills-grid">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML"
-              title="HTML">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS" title="CSS">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"
-              alt="JavaScript" title="JavaScript">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="React"
-              title="React">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg" alt="C++"
-              title="C++">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/figma/figma-original.svg" alt="Figma"
-              title="Figma">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/canva/canva-original.svg" alt="Canva"
-              title="Canva">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub"
-              title="GitHub">
-          </div>
-        </div>
-
         <a href="./assetss/sde.pdf" class="resume-btn" download>📄 Download Resume</a>
       </div>
     </div>
+  </section>
 
 
+  <section class="skills-section">
+    <h2 class="skills-title">🚀 Technical Skills</h2>
+
+    <div class="skills-container">
+
+      <!-- Programming Languages -->
+      <div class="skill-category">
+        <h3 class="category-title">💻 Programming Languages</h3>
+        <div class="skills-grid">
+          <div class="skill-item"><i class="devicon-java-plain colored-icon"></i><span>Java</span></div>
+          <div class="skill-item"><i class="devicon-javascript-plain colored-icon"></i><span>JavaScript</span></div>
+          <div class="skill-item"><i class="devicon-python-plain colored-icon"></i><span>Python</span></div>
+          <div class="skill-item"><i class="devicon-c-plain colored-icon"></i><span>C</span></div>
+        </div>
+      </div>
+
+      <!-- Frontend -->
+      <div class="skill-category">
+        <h3 class="category-title">🎨 Frontend Development</h3>
+        <div class="skills-grid">
+          <div class="skill-item"><i class="devicon-react-original colored-icon"></i><span>React.js</span></div>
+          <div class="skill-item"><i class="devicon-html5-plain colored-icon"></i><span>HTML5</span></div>
+          <div class="skill-item"><i class="devicon-css3-plain colored-icon"></i><span>CSS3</span></div>
+          <div class="skill-item"><i class="devicon-bootstrap-plain colored-icon"></i><span>Bootstrap</span></div>
+          <div class="skill-item"><i class="devicon-redux-original colored-icon"></i><span>Redux</span></div>
+          <div class="skill-item"><i class="devicon-tailwindcss-plain colored-icon"></i><span>Tailwind CSS</span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Backend -->
+      <div class="skill-category">
+        <h3 class="category-title">🛠️ Backend Development</h3>
+        <div class="skills-grid">
+          <div class="skill-item"><i class="devicon-nodejs-plain colored-icon"></i><span>Node.js</span></div>
+          <div class="skill-item"><i class="devicon-flask-original colored-icon"></i><span>Flask</span></div>
+          <div class="skill-item"><i class="devicon-fastapi-plain colored-icon"></i><span>REST APIs</span></div>
+          <div class="skill-item"><i class="devicon-express-original colored-icon"></i><span>Express.js</span></div>
+        </div>
+      </div>
+
+      <!-- Databases -->
+      <div class="skill-category">
+        <h3 class="category-title">🗄️ Databases</h3>
+        <div class="skills-grid">
+          <div class="skill-item"><i class="devicon-postgresql-plain colored-icon"></i><span>PostgreSQL</span></div>
+          <div class="skill-item"><i class="devicon-mysql-plain colored-icon"></i><span>MySQL</span></div>
+          <div class="skill-item"><i class="devicon-mongodb-plain colored-icon"></i><span>MongoDB</span></div>
+          <div class="skill-item"><i class="devicon-firebase-plain colored-icon"></i><span>Firebase</span></div>
+        </div>
+      </div>
+
+      <!-- Tools & Platforms -->
+      <div class="skill-category">
+        <h3 class="category-title">🧰 Tools & Platforms</h3>
+        <div class="skills-grid">
+          <div class="skill-item"><i class="devicon-git-plain colored-icon"></i><span>Git</span></div>
+          <div class="skill-item"><i class="devicon-github-original colored-icon"></i><span>GitHub</span></div>
+          <div class="skill-item"><i class="devicon-docker-plain colored-icon"></i><span>Docker</span></div>
+          <div class="skill-item"><i class="devicon-amazonwebservices-original colored-icon"></i><span>AWS</span>
+          </div>
+          <div class="skill-item"><i class="devicon-intellij-plain colored-icon"></i><span>IntelliJ IDEA</span></div>
+          <div class="skill-item"><i class="devicon-vscode-plain colored-icon"></i><span>VS Code</span></div>
+          <div class="skill-item"><i class="devicon-vercel-original colored-icon"></i><span>Vercel</span></div>
+        </div>
+      </div>
+
+      <!-- Testing -->
+      <div class="skill-category">
+        <h3 class="category-title">🧪 Testing</h3>
+        <div class="skills-grid">
+          <div class="skill-item"><i class="devicon-java-plain colored-icon"></i><span>JUnit</span></div>
+          <div class="skill-item"><i class="devicon-python-plain colored-icon"></i><span>Pytest</span></div>
+          <div class="skill-item"><i class="devicon-postman-plain colored-icon"></i><span>Postman</span></div>
+        </div>
+      </div>
+
+      <!-- Libraries -->
+      <div class="skill-category">
+        <h3 class="category-title">📚 Libraries & Frameworks</h3>
+        <div class="skills-grid">
+          <div class="skill-item"><i class="devicon-numpy-original colored-icon"></i><span>NumPy</span></div>
+          <div class="skill-item"><i class="devicon-pandas-original colored-icon"></i><span>Pandas</span></div>
+          <div class="skill-item"><i class="devicon-plotly-plain colored-icon"></i><span>Plotly</span></div>
+          <div class="skill-item"><i class="devicon-java-plain colored-icon"></i><span>Java Swing</span></div>
+        </div>
+      </div>
+
+      <!-- Core Concepts -->
+      <div class="skill-category">
+        <h3 class="category-title">🧠 Core Concepts</h3>
+        <div class="skills-grid">
+          <div class="skill-item"><i class="devicon-cplusplus-plain colored-icon"></i><span>Data Structures &
+              Algorithms</span></div>
+          <div class="skill-item"><i class="devicon-java-plain colored-icon"></i><span>Object-Oriented
+              Programming</span></div>
+          <div class="skill-item"><i class="devicon-architecture-original colored-icon"></i><span>System Design</span>
+          </div>
+        </div>
+      </div>
+
+    </div>
   </section>
   <!-- Projects Section -->
   <section id="portfolio">
@@ -147,15 +233,23 @@
       <!-- Cards will be injected via JavaScript -->
     </div>
 
-    <!-- Popup Modal -->
-    <div id="project-modal" class="modal">
-      <div class="modal-content">
-        <span class="close">&times;</span>
-        <h3 id="modal-title"></h3>
+    <!-- Project Modal -->
+    <div id="project-modal" class="project-modal-overlay">
+      <div class="project-modal-content">
+        <span class="project-close-btn">&times;</span>
 
-        <img id="modal-img" src="" alt="Project Image" />
-        <p id="modal-description"></p>
-        <div id="modal-skills" class="skill-tags"></div>
+        <!-- Left: Image -->
+        <div class="project-modal-left">
+          <img id="modal-img" src="" alt="Project Image" />
+        </div>
+
+        <!-- Right: Text Content -->
+        <div class="project-modal-right">
+          <h3 id="modal-title"></h3>
+          <p id="modal-description"></p>
+          <div id="modal-skills" class="skill-tags"></div>
+          <a id="modal-github" href="#" target="_blank" class="project-github-btn">🔗 View on GitHub</a>
+        </div>
       </div>
     </div>
   </section>
@@ -212,25 +306,33 @@
       </div>
     </section>
 
-    <div id="contactModal" class="modal">
-      <div class="modal-content">
-        <span class="close-btn">&times;</span>
-        <h3>Get in Touch</h3>
+    <!-- Contact Modal -->
+    <div id="contactModal" class="contact-modal-overlay">
+      <div class="contact-modal-content">
+        <span class="contact-close-btn">&times;</span>
+        <h3 class="contact-modal-heading">Get in Touch</h3>
+
         <form id="contactForm" action="https://api.web3forms.com/submit" method="POST">
-          <input type="hidden" name="access_key" value="dafa909a-bb8e-4cf7-a2cb-f8956cdf1240" />
+          <input type="hidden" name="access_key" value="5f924ade-75cf-46a4-9e67-256732270791" />
+
           <input type="text" name="name" placeholder="Your Name" required />
           <input type="email" name="email" placeholder="Your Email" required />
           <textarea name="message" placeholder="Your Message" rows="4" required></textarea>
+
           <button type="submit">Send Message</button>
         </form>
       </div>
     </div>
+
   </section>
 
   <footer>
     <div class="footer_">
-      <div class="footer-logo">
-        <img src="./assetss/Noor-design-china-name-removebg-preview.png" alt="">
+      <div id="nav-logo">
+        <a href="#home">
+          <!-- <img src="./assetss/Noor-design-china-name-removebg-preview.png" alt="Portfolio Logo" /> -->
+          <h3>Portfolio</h3>
+        </a>
       </div>
 
       <div class="social-links footer-links">
@@ -248,11 +350,11 @@
         </a>
       </div>
 
-      <div id="nav-item"> 
-      <a href="#home" class="active">Home</a>
-      <a href="#about">About</a>
-      <a href="#portfolio">Projects</a>
-      <a href="#contact">Contact</a>
+      <div id="nav-item">
+        <a href="#home" class="active">Home</a>
+        <a href="#about">About</a>
+        <a href="#portfolio">Projects</a>
+        <a href="#contact">Contact</a>
 
       </div>
 
