--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
           <h3 id="modal-title"></h3>
           <p id="modal-description"></p>
           <div id="modal-skills" class="skill-tags"></div>
-          <a id="modal-github" href="#" target="_blank" class="project-github-btn">🔗 View on GitHub</a>
+          <a id="modal-github" href="" target="_blank" class="project-github-btn">🔗 View on GitHub</a>
         </div>
       </div>
     </div>
