--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
 
 
-  <!-- <link rel="stylesheet" href="responsive.css"> -->
+  <link rel="stylesheet" href="responsive.css">
 
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -55,22 +55,20 @@
         <p>A Passionate Software Engineer Crafting Scalable Digital Solutions</p>
 
         <div class="social-links">
-          <a href="www.linkedin.com/in/muzahidul2000" target="_blank">
+          <a href="https://www.linkedin.com/in/muzahidul2000/" target="_blank">
             <img src="./assetss/linkedin.svg" alt="LinkedIn">
           </a>
           <a href="https://github.com/muzahidul-2000" target="_blank">
             <img src="./assetss/github.svg" alt="GitHub">
           </a>
-          <!-- <a href="https://www.instagram.com/noorislam_51/?next=%2F&hl=en" target="_blank">
-            <img src="./assetss/instagram.svg" alt="Instagram">
-          </a> -->
-          <a href="" target="_blank">
-            <img src="./assetss/facebook.svg" alt="Facebook">
+
+          <a href="https://leetcode.com/u/muzahidul98/" target="_blank">
+            <img src="./assetss/leetcode.svg" alt="Facebook">
           </a>
         </div>
 
         <div class="secondary-btn">
-          <a href="./assetss/sde.pdf target=" _blank">
+          <a href="./assetss/sde.pdf" target="_blank">
             <button>Resume</button>
           </a>
         </div>
@@ -211,7 +209,7 @@
       <div class="skill-category">
         <h3 class="category-title">🧠 Core Concepts</h3>
         <div class="skills-grid">
-          <div class="skill-item"><i class="devicon-cplusplus-plain colored-icon"></i><span>Data Structures &
+          <div class="skill-item"><i class="devicon-java-plain colored-icon"></i><span>Data Structures &
               Algorithms</span></div>
           <div class="skill-item"><i class="devicon-java-plain colored-icon"></i><span>Object-Oriented
               Programming</span></div>
@@ -336,17 +334,14 @@
       </div>
 
       <div class="social-links footer-links">
-        <a href="www.linkedin.com/in/muzahidul2000" target="_blank">
-          <img src="./assetss/linkedin.svg" alt="LinkedIn">
-        </a>
+          <a href="https://www.linkedin.com/in/muzahidul2000/" target="_blank">
+            <img src="./assetss/linkedin.svg" alt="LinkedIn">
+          </a>
         <a href="https://github.com/muzahidul-2000" target="_blank">
           <img src="./assetss/github.svg" alt="GitHub">
         </a>
-        <!-- <a href="https://www.instagram.com/noorislam_51/?next=%2F&hl=en" target="_blank">
-          <img src="./assetss/instagram.svg" alt="Instagram">
-        </a> -->
-        <a href="https://www.facebook.com/mdnoor.islam.9828456" target="_blank">
-          <img src="./assetss/facebook.svg" alt="Facebook">
+        <a href="https://leetcode.com/u/muzahidul98/" target="_blank">
+          <img src="./assetss/leetcode.svg" alt="Facebook">
         </a>
       </div>
 
